--- a/module3-site/index.html
+++ b/module3-site/index.html
@@ -6,79 +6,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>David Chu's China Bistro</title>
     <!-- Load CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link href="styles.css" rel="stylesheet" />
-    <!-- Load JavaScript (defer attribute means they will not load until page is done loading) -->
-    <!-- Bootstrap 5 DOES NOT REQUIRE jQuery! -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-      defer
-    ></script>
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <!-- 
-        Lesson adjustments
-          1. navbar-light adds color to the hamburger menu, or else the icons are transparent
-      -->
-      <nav id="header-nav" class="navbar navbar-expand-lg navbar-light">
-        <!-- 
-          Bootstrap 5 adjustments:
-          1. .pull-left on div#navbar-header no longer works due to the use of flexbox.
-             Instead, placing justify-content-start on the container will left align the flex contents.
-        -->
-        <div class="container justify-content-start">
-          <!-- 
-            Company Logo
-            Bootstrap 5 adjustments
-              1. navbar-header is not part of the navbar component
-              2. .visible-{md, lg} to has been changed to .d-{md, lg}-block
-            Lesson adjustments
-              1. Visibility placed on div rather then a element
-          -->
-          <div class="navbar-header d-none d-md-block d-lg-block">
-            <a href="index.html">
-              <div id="logo-img" alt="Logo Image"></div>
+      <nav id="header-nav" classes="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="index.html" class="pull-left visible-md visible-lg">
+              <div id="logo-img" alt="Logo image"></div>
             </a>
+            <div class="navbar-brand">
+              <a href="index.html">
+                <h1>David Chu's China Bistro</h1>
+              </a>
+              <p>
+                <img src="images/star-k-logo.png" alt="Kosher certification" />
+                <span>Kosher Certification</span>
+              </p>
+            </div>
+            <!-- end .navbar-brand -->
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#collapsable-nav"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
           </div>
-          <!-- Company Name, Kosher Cert. -->
-          <div class="navbar-brand">
-            <a href="index.html">
-              <h1>David Chu's China Bistro</h1>
-            </a>
-            <p>
-              <img src="images/star-k-logo.png" alt="Kosher certification" />
-              <span>Kosher Certified</span>
-            </p>
+          <!-- end .navbar-header -->
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li>
+                <a href="menu-categories.html">
+                  <span class="glyphicon glyphicon-cutlery"></span>
+                  <br class="hidden-xs" />
+                  Menu
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-info-sign"></span>
+                  <br class="hidden-xs" />
+                  About
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-certification"></span>
+                  <br class="hidden-xs" />
+                  Awards
+                </a>
+              </li>
+              <li id="phone" class="hidden-xs">
+                <a href="tel:410-602-5008">
+                  <span>410-602-5008</span>
+                </a>
+                <div>* We Deliver</div>
+              </li>
+            </ul>
           </div>
-          <!-- 
-            Hamburger Menu
-            Bootstrap 5 adjustments:
-              1. span with sr-only class has been removed
-              2. data-{attr} has been changed to data-bs-{attr}
-              3. navbar-toggler-icon replaced the need for multiple icon-bar spans
-          -->
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#collapsable-nav"
-            aria-controls="collapsable-nav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
+          <!-- end #collapsable-nav -->
         </div>
+        <!-- end .container -->
       </nav>
     </header>
+    <script src="js/jquery-2.1.4.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
