--- a/module3-site/index.html
+++ b/module3-site/index.html
@@ -77,6 +77,21 @@
         <!-- end .container -->
       </nav>
     </header>
+
+    <div id="call-btn" class="visible-xs">
+      <a href="tel:410-602-5008" class="btn">
+        <span class="glyphicon glyphicon-earphone"></span>
+        410-602-5008
+      </a>
+    </div>
+    <div id="xs-deliver" class="text-center visible-xs">We Deliver</div>
+
+    <div class="container" id="main-content">
+      <div class="jumbotron">
+        <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs" />
+      </div>
+    </div>
+
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
