--- a/module3-site/index.html
+++ b/module3-site/index.html
@@ -86,9 +86,26 @@
     </div>
     <div id="xs-deliver" class="text-center visible-xs">We Deliver</div>
 
-    <div class="container" id="main-content">
+    <div id="main-content" class="container">
       <div class="jumbotron">
         <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs" />
+      </div>
+      <div id="home-tiles" class="row">
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <a href="menu-categories.html">
+            <div id="menu-tile"><span>menu</span></div>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <a href="single-category.html">
+            <div id="specials-tile"><span>specials</span></div>
+          </a>
+        </div>
+        <div class="col-md-4 col-sm-6 col-xs-12">
+          <a href="" target="_blank">
+            <div id="map-tile"><span>map</span></div>
+          </a>
+        </div>
       </div>
     </div>
 
