--- a/module3-site/index.html
+++ b/module3-site/index.html
@@ -144,6 +144,7 @@
           </section>
         </div>
         <!-- /.row -->
+        <div class="text-center">&copy; Copyright David Chu's China Bistro 2022</div>
       </div>
       <!-- /.container -->
     </footer>
