--- a/module3-site/index.html
+++ b/module3-site/index.html
@@ -14,7 +14,7 @@
       <nav id="header-nav" class="navbar navbar-default">
         <div class="container">
           <div class="navbar-header">
-            <a href="index.html" class="pull-left visible-sm visible-md visible-lg">
+            <a href="index.html" class="pull-left">
               <div id="logo-img" alt="Logo image"></div>
             </a>
             <div class="navbar-brand">
@@ -121,7 +121,7 @@
       <!-- end #home-tiles -->
     </main>
 
-    <footer class="panel-footer">
+    <footer>
       <div class="container">
         <div class="row">
           <section id="hours" class="col-sm-4">
@@ -143,12 +143,11 @@
             <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
           </section>
         </div>
-        <!-- /.row -->
+        <!-- end .row -->
         <div class="text-center">&copy; Copyright David Chu's China Bistro 2022</div>
       </div>
-      <!-- /.container -->
+      <!-- end .container -->
     </footer>
-    <!-- /.panel-footer -->
 
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
