--- a/module3-site/index.html
+++ b/module3-site/index.html
@@ -10,11 +10,146 @@
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header data-template-dir="templates" data-template-file="header"></header>
-    <main data-template-dir="templates" data-template-file="main"></main>
-    <footer data-template-dir="templates" data-template-file="footer"></footer>
+    <header>
+      <nav id="header-nav" class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="index.html" class="pull-left">
+              <div id="logo-img" alt="Logo image"></div>
+            </a>
+            <div class="navbar-brand">
+              <a href="index.html">
+                <h1>David Chu's China Bistro</h1>
+              </a>
+              <p>
+                <img src="images/star-k-logo.png" alt="Kosher certification" />
+                <span>Kosher Certification</span>
+              </p>
+            </div>
+            <!-- end .navbar-brand -->
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#collapsable-nav"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <!-- end .navbar-header -->
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li>
+                <a href="menu-categories.html">
+                  <span class="glyphicon glyphicon-cutlery"></span>
+                  <br class="hidden-xs" />
+                  Menu
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-info-sign"></span>
+                  <br class="hidden-xs" />
+                  About
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-certificate"></span>
+                  <br class="hidden-xs" />
+                  Awards
+                </a>
+              </li>
+              <li id="phone" class="hidden-xs">
+                <a href="tel:410-602-5008">
+                  <span>410-602-5008</span>
+                </a>
+                <div>* We Deliver</div>
+              </li>
+            </ul>
+          </div>
+          <!-- end #collapsable-nav -->
+        </div>
+        <!-- end .container -->
+      </nav>
+      <div id="call-btn" class="visible-xs">
+        <a href="tel:410-602-5008" class="btn">
+          <span class="glyphicon glyphicon-earphone"></span>
+          410-602-5008
+        </a>
+      </div>
+      <div id="xs-deliver" class="text-center visible-xs">We Deliver</div>
+    </header>
 
-    <script src="js/page-loader.js"></script>
+    <main>
+      <div class="container">
+        <div class="jumbotron">
+          <img src="images/jumbotron_768.jpg" alt="Picture of restaurant" class="img-responsive visible-xs" />
+        </div>
+        <div id="home-tiles" class="row">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="menu-categories.html">
+              <div id="menu-tile"><span>menu</span></div>
+            </a>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="single-category.html">
+              <div id="specials-tile"><span>specials</span></div>
+            </a>
+          </div>
+          <div class="col-md-4 col-sm-12 col-xs-12">
+            <a href="https://goo.gl/maps/gpMdxXjvV1KU33k9A" target="_blank">
+              <div id="map-tile">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3084.6752464053516!2d-76.71387678463584!3d39.363590279501345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xab20a0e99daa17ea!2sDavid%20Chu&#39;s%20China%20Bistro!5e0!3m2!1sen!2sus!4v1649364789034!5m2!1sen!2sus"
+                  width="100%"
+                  height="100%"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+                <span>map</span>
+              </div>
+            </a>
+          </div>
+          <!-- end map container -->
+        </div>
+        <!-- end #home-tiles -->
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <section id="hours" class="col-sm-4">
+            <span>Hours:</span><br />
+            Sun-Thurs: 11:15am - 10:00pm<br />
+            Fri: 11:15am - 10:00pm<br />
+            Saturday Closed
+            <hr class="visible-xs" />
+          </section>
+          <section id="address" class="col-sm-4">
+            <span>Address:</span><br />
+            7105 Reisterstown Road<br />
+            Baltimore, MD 21215
+            <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+            <hr class="visible-xs" />
+          </section>
+          <section id="testimonials" class="col-sm-4">
+            <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+            <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+          </section>
+        </div>
+        <!-- end .row -->
+        <div class="text-center">&copy; Copyright David Chu's China Bistro 2022</div>
+      </div>
+    </footer>
+
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
