--- a/module3-site/menu-categories.html
+++ b/module3-site/menu-categories.html
@@ -4,17 +4,190 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title data-template-var="title"></title>
+    <title>David Chu's China Bistro</title>
     <!-- Load CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header data-template-dir="templates" data-template-file="header"></header>
-    <main data-template-dir="templates" data-template-file="menu"></main>
-    <footer data-template-dir="templates" data-template-file="footer"></footer>
+    <header>
+      <nav id="header-nav" class="navbar navbar-default">
+        <div class="container">
+          <div class="navbar-header">
+            <a href="index.html" class="pull-left">
+              <div id="logo-img" alt="Logo image"></div>
+            </a>
+            <div class="navbar-brand">
+              <a href="index.html">
+                <h1>David Chu's China Bistro</h1>
+              </a>
+              <p>
+                <img src="images/star-k-logo.png" alt="Kosher certification" />
+                <span>Kosher Certification</span>
+              </p>
+            </div>
+            <!-- end .navbar-brand -->
+            <button
+              type="button"
+              class="navbar-toggle collapsed"
+              data-toggle="collapse"
+              data-target="#collapsable-nav"
+              aria-expanded="false"
+            >
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+          </div>
+          <!-- end .navbar-header -->
+          <div id="collapsable-nav" class="collapse navbar-collapse">
+            <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li class="active">
+                <a href="menu-categories.html">
+                  <span class="glyphicon glyphicon-cutlery"></span>
+                  <br class="hidden-xs" />
+                  Menu
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-info-sign"></span>
+                  <br class="hidden-xs" />
+                  About
+                </a>
+              </li>
+              <li>
+                <a href="#">
+                  <span class="glyphicon glyphicon-certificate"></span>
+                  <br class="hidden-xs" />
+                  Awards
+                </a>
+              </li>
+              <li id="phone" class="hidden-xs">
+                <a href="tel:410-602-5008">
+                  <span>410-602-5008</span>
+                </a>
+                <div>* We Deliver</div>
+              </li>
+            </ul>
+          </div>
+          <!-- end #collapsable-nav -->
+        </div>
+        <!-- end .container -->
+      </nav>
+      <div id="call-btn" class="visible-xs">
+        <a href="tel:410-602-5008" class="btn">
+          <span class="glyphicon glyphicon-earphone"></span>
+          410-602-5008
+        </a>
+      </div>
+      <div id="xs-deliver" class="text-center visible-xs">We Deliver</div>
+    </header>
 
-    <script src="js/page-loader.js"></script>
+    <main>
+      <div id="main-content" class="container">
+        <h2 id="menu-categories-title" class="text-center">Menu Categories</h2>
+        <div class="text-center">
+          Substituting white rice with brown rice or fried rice after 3:00pm will be $1.50 for a pint and $2.50 for a
+          quart.
+        </div>
+        <section class="row">
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+          <div class="col-md-3 col-sm-4 col-xs-6 col-xxs-12">
+            <a href="single-category.html">
+              <div class="category-tile">
+                <img width="200" height="200" src="./images/menu/B/B.jpg" alt="Lunch" />
+                <span>Lunch</span>
+              </div>
+            </a>
+          </div>
+        </section>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <section id="hours" class="col-sm-4">
+            <span>Hours:</span><br />
+            Sun-Thurs: 11:15am - 10:00pm<br />
+            Fri: 11:15am - 10:00pm<br />
+            Saturday Closed
+            <hr class="visible-xs" />
+          </section>
+          <section id="address" class="col-sm-4">
+            <span>Address:</span><br />
+            7105 Reisterstown Road<br />
+            Baltimore, MD 21215
+            <p>* Delivery area within 3-4 miles, with minimum order of $20 plus $3 charge for all deliveries.</p>
+            <hr class="visible-xs" />
+          </section>
+          <section id="testimonials" class="col-sm-4">
+            <p>"The best Chinese restaurant I've been to! And that's saying a lot, since I've been to many!"</p>
+            <p>"Amazing food! Great service! Couldn't ask for more! I'll be back again and again!"</p>
+          </section>
+        </div>
+        <!-- end .row -->
+        <div class="text-center">&copy; Copyright David Chu's China Bistro 2022</div>
+      </div>
+    </footer>
+
     <script src="js/jquery-2.1.4.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script>
