--- a/module3-site/single-category.html
+++ b/module3-site/single-category.html
@@ -90,7 +90,7 @@
         <h2 id="menu-categories-title" class="text-center">Lunch Menu</h2>
         <div class="text-center">Lunch is not served until 1:00pm</div>
         <section class="row">
-          <div class="menu-item-title col-md-6">
+          <div class="menu-item-tile col-md-6">
             <div class="row">
               <div class="col-sm-5">
                 <div class="menu-item-photo">
@@ -112,7 +112,7 @@
             </div>
             <hr class="visible-xs" />
           </div>
-          <div class="menu-item-title col-md-6">
+          <div class="menu-item-tile col-md-6">
             <div class="row">
               <div class="col-sm-5">
                 <div class="menu-item-photo">
@@ -136,7 +136,7 @@
           </div>
         </section>
         <section class="row">
-          <div class="menu-item-title col-md-6">
+          <div class="menu-item-tile col-md-6">
             <div class="row">
               <div class="col-sm-5">
                 <div class="menu-item-photo">
@@ -158,7 +158,7 @@
             </div>
             <hr class="visible-xs" />
           </div>
-          <div class="menu-item-title col-md-6">
+          <div class="menu-item-tile col-md-6">
             <div class="row">
               <div class="col-sm-5">
                 <div class="menu-item-photo">
