--- a/module3-site/single-category.html
+++ b/module3-site/single-category.html
@@ -94,7 +94,31 @@
             <div class="row">
               <div class="col-sm-5">
                 <div class="menu-item-photo">
-                  <div>D03</div>
+                  <div>D01</div>
+                  <img src="./images/menu/B/B.jpg" alt="Item" width="250" height="150" class="img-responsive" />
+                </div>
+                <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
+              </div>
+              <div class="menu-item-description col-sm-7">
+                <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
+                <p class="menu-item-details">
+                  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                  laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                  labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                  ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+                  qui officia deserunt mollit anim id est laborum.
+                </p>
+              </div>
+            </div>
+            <hr class="visible-xs" />
+          </div>
+          <div class="menu-item-tile col-md-6">
+            <div class="row">
+              <div class="col-sm-5">
+                <div class="menu-item-photo">
+                  <div>D02</div>
                   <img src="./images/menu/B/B.jpg" alt="Item" width="250" height="150" class="img-responsive" />
                 </div>
                 <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
@@ -104,14 +128,13 @@
                 <p class="menu-item-details">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                   dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                  officia deserunt mollit anim id est laborum.
+                  aliquip ex ea commodo consequat.
                 </p>
               </div>
             </div>
             <hr class="visible-xs" />
           </div>
+          <div class="clearfix visible-md visible-lg"></div>
           <div class="menu-item-tile col-md-6">
             <div class="row">
               <div class="col-sm-5">
@@ -125,22 +148,17 @@
                 <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
                 <p class="menu-item-details">
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                  officia deserunt mollit anim id est laborum.
+                  dolore magna aliqua.
                 </p>
               </div>
             </div>
             <hr class="visible-xs" />
           </div>
-        </section>
-        <section class="row">
           <div class="menu-item-tile col-md-6">
             <div class="row">
               <div class="col-sm-5">
                 <div class="menu-item-photo">
-                  <div>D03</div>
+                  <div>D04</div>
                   <img src="./images/menu/B/B.jpg" alt="Item" width="250" height="150" class="img-responsive" />
                 </div>
                 <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
@@ -158,28 +176,7 @@
             </div>
             <hr class="visible-xs" />
           </div>
-          <div class="menu-item-tile col-md-6">
-            <div class="row">
-              <div class="col-sm-5">
-                <div class="menu-item-photo">
-                  <div>D03</div>
-                  <img src="./images/menu/B/B.jpg" alt="Item" width="250" height="150" class="img-responsive" />
-                </div>
-                <div class="menu-item-price">$10.95<span> (pint)</span> $14.95 <span>(quart)</span></div>
-              </div>
-              <div class="menu-item-description col-sm-7">
-                <h3 class="menu-item-title">Veal with Mixed Vegetables</h3>
-                <p class="menu-item-details">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                  dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                  aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-                  dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                  officia deserunt mollit anim id est laborum.
-                </p>
-              </div>
-            </div>
-            <hr class="visible-xs" />
-          </div>
+          <div class="clearfix visible-md visible-lg"></div>
         </section>
       </div>
     </main>
