--- a/module3-site/single-category.html
+++ b/module3-site/single-category.html
@@ -43,6 +43,13 @@
           <!-- end .navbar-header -->
           <div id="collapsable-nav" class="collapse navbar-collapse">
             <ul id="nav-list" class="nav navbar-nav navbar-right">
+              <li class="visible-xs">
+                <a href="index.html">
+                  <span class="glyphicon glyphicon-home"></span>
+                  <br class="hidden-xs" />
+                  Home
+                </a>
+              </li>
               <li class="active">
                 <a href="menu-categories.html">
                   <span class="glyphicon glyphicon-cutlery"></span>
@@ -134,7 +141,8 @@
             </div>
             <hr class="visible-xs" />
           </div>
-          <div class="clearfix visible-md visible-lg"></div>
+        </section>
+        <section class="row">
           <div class="menu-item-tile col-md-6">
             <div class="row">
               <div class="col-sm-5">
@@ -176,7 +184,6 @@
             </div>
             <hr class="visible-xs" />
           </div>
-          <div class="clearfix visible-md visible-lg"></div>
         </section>
       </div>
     </main>
