--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -12,7 +12,7 @@
   <body>
     <header id="home">
       <nav class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
           <div class="navbar-header">
             <button
               type="button"
