--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -22,21 +22,19 @@
               aria-expanded="false"
             >
               <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+              <img src="./images/hamburger.png" width="50" height="50" />
             </button>
-            <a href="#" class="navbar-brand">Food, LLC</a>
+            <div class="navbar-brand"><span>Food</span>, LLC</div>
           </div>
           <div class="collapse navbar-collapse" id="food-menu">
             <ul class="nav navbar-nav visible-xs">
               <li>
                 <a href="#chicken">Chicken</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="#beef">Beef</a>
               </li>
-              <li class="active">
+              <li>
                 <a href="#sushi">Sushi</a>
               </li>
             </ul>
