--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -9,6 +9,7 @@
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
+  <script src="../utils/calcs.js" defer></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
