--- a/module5-site/index.html
+++ b/module5-site/index.html
@@ -93,7 +93,7 @@
       <div id="xs-deliver" class="text-center visible-xs">We Deliver</div>
     </header>
 
-    <main id="main-content"></main>
+    <main id="main-content" class="container"></main>
 
     <footer>
       <div class="container">
