--- a/module5-site/snippets/home-snippet.html
+++ b/module5-site/snippets/home-snippet.html
@@ -8,7 +8,7 @@
     </a>
   </div>
   <div class="col-md-4 col-sm-6 col-xs-12">
-    <a href="single-category.html">
+    <a href="#" onclick="$dc.loadMenuItems('SP')">
       <div id="specials-tile"><span>specials</span></div>
     </a>
   </div>
