--- a/fullstack-course4/module4-solution/index.html
+++ b/fullstack-course4/module4-solution/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
@@ -11,7 +12,10 @@
   <script src="script.js"></script>
   <script src="../utils/calcs.js" defer></script>
 </head>
+
 <body>
   <h1>Module 4 Solution Starter</h1>
+  <span>(open browser console to view script result)</span>
 </body>
+
 </html>
